--- a/evotingmobile/app/src/main/res/values/strings.xml
+++ b/evotingmobile/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">e-voting-mobile</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">EVoting-Mobile</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_title">E-Voting Mobile</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
