--- a/evotingmobile/app/src/main/res/values/strings.xml
+++ b/evotingmobile/app/src/main/res/values/strings.xml
@@ -9,10 +9,17 @@
     <string name="action_settings">Settings</string>
 
     <string name="login">LogIn</string>
+    <string name="logout">LogOut</string>
     <string name="e_voting">E-Voting</string>
     <string name="login_text">Login</string>
     <string name="enter_email">Email</string>
     <string name="password">Password</string>
     <string name="login_text_btn">Login</string>
     <string name="logo">Logo</string>
+    <string name="title_activity_history_">History_Activity</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="title_activity_history">History_Activity</string>
 </resources>
