--- a/evotingmobile/app/src/main/res/values/strings.xml
+++ b/evotingmobile/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="nav_header_title">E-Voting Mobile</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_user_details">User information</string>
 
     <string name="login">LogIn</string>
     <string name="logout">LogOut</string>
@@ -22,4 +22,10 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_history">History_Activity</string>
+    <string name="roles_prompt">*Choose your role</string>
+    <string-array name="roles">
+        <item>ADMIN</item>
+        <item>VOTER</item>
+        <item>CANDIDATE</item>
+    </string-array>
 </resources>
